# pessoal

./: .gitignore  NUL  alembic.ini  diagnostico_pdfs.py  main.py  pyproject.toml
api/: app.py  conta_luz.py  logging_config.py
api/Shared/: upload_pdf.py
api/configurations/: logging_config.py
api/endpoints/: conta_agua.py  conta_agua_endpoints.py  conta_luz.py
application/conta_agua/: command.py  dto.py  handlers.py  interface.py  irepository.py  query.py  response.py
application/conta_luz/: command.py  dto.py  handlers.py  interface.py  irepository.py  query.py  response.py
application/shared/: response.py
core/celesc/: celesc_extrator.py
core/dataframe/: celesc_extrator.py  dataframe_wrapper.py  samae_extrator.py
core/dataframe-wrapper/: celesc_extrator.py  dataframe-wrapper.py  dataframe_wrapper.py  samae_extrator.py
core/entities/: __init__.py  conta_agua.py  conta_luz.py  expense.py  transaction.py
core/enums/: e_expense_type.py  e_transacao.py
core/value_object/: __init__.py  descricao.py  evento_data.py  mes_referencia.py  tipo_despesa.py  transaction_type.py  valor.py
infrastructure/data/: bootstrap.py  db_context.py  mappings.py  repository.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init_schema.py  7098f9b605eb_init_schema.py  e057b35e3c6f_init_schema.py
tests/: test_celesc_extrator.py  test_conta_agua.py  test_conta_luz.py  test_dataframe_wrapper.py  test_entity.py  test_expense_variable.py  test_samae_extrator.py  test_value_objects.py
tools/: limpar_historia_terminal_jetbrains.py
(+13 files in other folders)
