[project]
name = "pessoal"
version = "0.1.0"
description = "Projeto sem nome definido para extração de dados de arquivos pessoais, categorização e organização."
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "jpype1>=1.6.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pypdf>=6.1.1",
    "tabula-py>=2.9.0",
    "pytest>=8.3.0",
    "fastapi[standard]>=0.118.1",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.2",
    "scalar-fastapi>=1.4.3",
    "uuid7>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
